I tested (intel GMA 3150) 10.1-BETA 2/3 and 10.1-RC1/2 output still dirty and occurs in spurts and not so smooth compared with SYSCONS.
Can you please quantify "dirty"? Perhaps a video showing what you observe. Also, please add details on the system.
Hi all. Can I chime in? On distortions, I saw more then one time that cursor screen position is not updated when printing kernel messages. I haven't captured that yet but it's fairly reproducible. 1. After X starts restart it so another portion of vt/kms info would be printed to the console. 2. Switch to screen 0 and hit Ctrl-Alt-Del. The messages coming to console would start overwriting vt/kms info like the cursor was placed just before it. I'm on 10-STABLE and my video is Radeon HD 7560D.
> On distortions, I saw more then one time that cursor screen position is not updated when printing kernel messages. I haven't captured that yet but it's fairly reproducible. I believe you're describing this issue, from the wiki: The text cursor may end up in the middle of kernel messages after loading a kernel video driver. I'm not sure what the original submitter means though.
A commit references this bug: Author: dumbbell Date: Sat Nov 1 17:05:17 UTC 2014 New revision: 273932 URL: https://svnweb.freebsd.org/changeset/base/273932 Log: vt(4): Adjust the cursor position after changing the window size A new terminal_set_cursor() is added: it wraps the existing teken_set_cursor() function. In vtbuf_grow(), the cursor position is adjusted at the end of the function. In vt_change_font(), we call terminal_set_cursor() just after terminal_set_winsize_blank(), while the terminal is mute. This fixes a bug where, after loading a kernel video driver which increases the terminal window size, the cursor remains at its old position, in other words, in the middle of the display content. PR: 194421 MFC after: 1 week Changes: head/sys/dev/vt/vt_buf.c head/sys/dev/vt/vt_core.c head/sys/kern/subr_terminal.c head/sys/sys/terminal.h
I believe I fixed the issue reported by arcade@b1t.name. But I'm waiting for a more detailed description from sasamotikomi@gmail.com before closing this bug.
A commit references this bug: Author: dumbbell Date: Sat Nov 22 16:55:57 UTC 2014 New revision: 274860 URL: https://svnweb.freebsd.org/changeset/base/274860 Log: vt(4): Adjust the cursor position after changing the window size A new terminal_set_cursor() is added: it wraps the existing teken_set_cursor() function. In vtbuf_grow(), the cursor position is adjusted at the end of the function. In vt_change_font(), we call terminal_set_cursor() just after terminal_set_winsize_blank(), while the terminal is mute. This fixes a bug where, after loading a kernel video driver which increases the terminal window size, the cursor remains at its old position, in other words, in the middle of the display content. PR: 194421 MFC of: r273932 Changes: _U stable/10/ stable/10/sys/dev/vt/vt_buf.c stable/10/sys/dev/vt/vt_core.c stable/10/sys/kern/subr_terminal.c stable/10/sys/sys/terminal.h
(In reply to Jean-Sebastien Pedron from comment #5) > I believe I fixed the issue reported by arcade@b1t.name. But I'm waiting for > a more detailed description from sasamotikomi@gmail.com before closing this > bug. Yes, issue look like fixed for me.
Submitter reports the issue looks to be fixed.