sys/sys/terminal.h
@@ -962,6 +962,23 @@ end_function_decl
 
 begin_function_decl
 name|void
+name|terminal_set_cursor
+parameter_list|(
+name|struct
+name|terminal
+modifier|*
+name|tm
+parameter_list|,
+specifier|const
+name|term_pos_t
+modifier|*
+name|pos
+parameter_list|)
+function_decl|;
+end_function_decl
+
+begin_function_decl
+name|void
 name|terminal_set_winsize_blank
 parameter_list|(
 name|struct
